--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@ai-sdk/google": "^1.1.14",
     "@ai-sdk/react": "^1.1.16",
     "@clerk/nextjs": "^6.11.0",
+    "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.9.0",
+    "@langchain/community": "^0.3.31",
+    "@langchain/core": "^0.3.40",
+    "@langchain/textsplitters": "^0.1.0",
     "@next/swc-wasm-nodejs": "14.2.23",
     "@prisma/client": "^6.3.1",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -63,6 +67,7 @@
     "next": "14.2.23",
     "next-themes": "^0.3.0",
     "openai": "^4.82.0",
+    "pdf-parse": "^1.1.1",
     "postcss": "8.4.30",
     "prisma": "^6.3.1",
     "qrcode": "^1.5.4",
@@ -70,6 +75,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
@@ -84,6 +90,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.15",
+    "@types/pdf-parse": "^1.1.4",
     "@types/qrcode": "^1.5.5"
   }
 }
